# math-core-fonts

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-and-deploy.yml
LibertinusMath/: LibertinusMath-Regular.sfd  build_otf.sh  convert_to_otf.sh
LibertinusMath/features/: ssty.fea
NewComputerModernMath/: build_otf.sh  convert_to_otf.sh
NotoSansMath/: build_otf.sh  convert_to_otf.sh
NotoSansMath-Regular.ufo/: fontinfo.plist  groups.plist  kerning.plist  lib.plist
NotoSansMath-Regular.ufo/glyphs/: A_-fraktur.glif  A_-fraktur.ssty1.glif  A_-fraktur.ssty2.glif  A_.ssty1.glif  A_.ssty2.glif  A_B_old-fraktur.glif  A_P_L_I_beam.glif  A_P_L_alphaunderbar.glif  A_P_L_backslashbar.glif  A_P_L_circledieresis.glif  A_P_L_circlejot.glif  A_P_L_circlestar.glif  A_P_L_circlestile.glif  A_P_L_commabar.glif  A_P_L_diamondunderbar.glif  A_P_L_downvane.glif  A_P_L_epsilonunderbar.glif  A_P_L_greaterthandieresis.glif  A_P_L_iota.glif  A_P_L_jotdieresis.glif  A_P_L_jotunderbar.glif  A_P_L_leftshoestile.glif  A_P_L_quad.glif  A_P_L_quaddiamond.glif  A_P_L_quaddownarrow.glif  A_P_L_quaddowncaret.glif  A_P_L_quadgreaterthan.glif  A_P_L_quadjot.glif  A_P_L_quadquestion.glif  A_P_L_quadslash.glif  A_P_L_quadupcaret.glif  A_P_L_squishquad.glif  A_P_L_upshoejot.glif  A_P_L_uptackdieresis.glif  A_P_L_uptackjot.glif  A_boldscript-math.glif  A_doubleS_truck.glif  A_doubleS_truck.ssty2.glif  A_lpha.ssty1.glif  A_lphaitalic-math.ssty1.glif  (+2592 more)
NotoSansMath/NotoSansMath-Regular.ufo/: features.fea  lib.plist
NotoSansMath/NotoSansMath-Regular.ufo/glyphs/: A_-cy.glif  A_.glif  (+2605 more)
