[project]
name = "math-core-fonts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gftools>=0.9.994",
    "pcpp>=1.30",
    "psautohint>=2.4.0",
    "sfdlib>=2.0.0.post0",
    "sfdnormalize>=1.1.1",
    "sfdutf7>=0.1.0",
    "skia-pathops>=0.9.2",
    "ufo2ft>=3.7.0",
    "ufolib2>=0.18.1",
]
